[package]
name = "async-ringbuffer"
version = "0.3.1"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "A nonblocking spsc ring buffer with fixed capacity."
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/AljoschaMeyer/async-ringbuffer"

[dependencies]
futures-core-preview = "0.2.0"
futures-io-preview = "0.2.0"

[dev-dependencies]
futures-preview = "0.2.0"
