[package]
name = "async-ringbuffer"
version = "0.5.1"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "A nonblocking spsc ring buffer with fixed capacity."
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/sunrise-choir/async-ringbuffer"
edition = "2018"

[dependencies]
futures-io-preview = "0.3.0-alpha.16"

[dev-dependencies]
futures-preview = "0.3.0-alpha.16"
