[package]
name = "async-ringbuffer"
version = "0.5.5"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "A nonblocking spsc ring buffer with fixed capacity."
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/sunrise-choir/async-ringbuffer"
edition = "2018"

[dependencies]
futures-io = "0.3.1"

[dev-dependencies]
futures = "0.3.1"
